Fixing side scroll on mobile

--- a/src/components/about/about.less
+++ b/src/components/about/about.less
@@ -37,6 +37,11 @@
       .email, .profile-pic {
         display:none;
       }
+      @media @screen-sm {
+        &:first-child {
+          margin-right: 0;
+        }
+      }
     }
   }
 
